# bff-python-reference-architecture

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  services.py
.codemap/: map.md  quality.md
config/: .env.example
config/settings/: application.yaml  database.yaml  features.yaml  logging.yaml  security.yaml
docs/: README.md
docs/01-getting-started/: 001-overview.md  README.md
docs/02-architecture/: 001-architecture-assessment.md  README.md
docs/03-principles/: README.md
docs/04-rules/: 001_module_boundaries.jsonl  002_code_patterns.jsonl  003_configuration.jsonl  004_datetime_policy.jsonl  005_data_layer.jsonl  README.md
docs/05-plans/: README.md
docs/98-research/: README.md
docs/99-reference-architecture/: 01-core-overview.md  04-core-backend-architecture.md  07-core-python-coding-standards.md  08-core-observability.md  11-core-project-template.md  15-core-background-tasks.md  16-core-concurrency-and-resilience.md  17-core-deployment-bare-metal.md  21-opt-event-architecture.md  25-opt-telegram-client-integration.md  26-opt-tui-architecture.md  27-opt-multi-channel-gateway.md
modules/: __init__.py
modules/backend/: main.py
modules/backend/api/: health.py
modules/backend/core/: config.py  rbac.py  (+11 more)
modules/frontend/: package-lock.json  package.json
scripts/: code_map.py  code_quality.py  code_rules.py  code_rules_fast.py
tests/: conftest.py
tests/integration/: conftest.py  test_auth.py  test_users.py
tests/unit/: conftest.py
(+39 files in other folders)
